; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/test/unit/extr_prof_thread_name.c_mallctl_thread_name_get_impl.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/test/unit/extr_prof_thread_name.c_mallctl_thread_name_get_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"thread.prof.name\00", align 1
@.str.1 = private unnamed_addr constant [61 x i8] c"%s():%d: Unexpected mallctl failure reading thread.prof.name\00", align 1
@.str.2 = private unnamed_addr constant [43 x i8] c"%s():%d: Unexpected thread.prof.name value\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32)* @mallctl_thread_name_get_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mallctl_thread_name_get_impl(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  store i64 8, i64* %8, align 8
  %9 = call i32 @mallctl(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8** %7, i64* %8, i32* null, i32 0)
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @assert_d_eq(i32 %9, i32 0, i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.1, i64 0, i64 0), i8* %10, i32 %11)
  %13 = load i8*, i8** %7, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @assert_str_eq(i8* %13, i8* %14, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.2, i64 0, i64 0), i8* %15, i32 %16)
  ret void
}

declare dso_local i32 @assert_d_eq(i32, i32, i8*, i8*, i32) #1

declare dso_local i32 @mallctl(i8*, i8**, i64*, i32*, i32) #1

declare dso_local i32 @assert_str_eq(i8*, i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
